RP-253 Fix for overflow on modal

--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -32,6 +32,7 @@ app-modal {
 
             div.modal-body {
                 max-height: calc(90vh - 12rem);
+                overflow: scroll;
 
                 label {
                     font-size: 1.4rem;
